Added about info

--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -11,8 +11,8 @@
     
     {{>header}}
 
-    <p>Created by {{name}}</p>
 
+    <p>This site was created by Josh Farr. It uses data from weatherAPI and mapbox.com</p>
     <img class="portrait" src="img/man.jpg" alt="">
     </div>
     {{>footer}}
